# Extended-RaBitQ

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: README.md
inc/: defines.hpp
inc/index/: Cluster.hpp  HASearcher.hpp  IVF.hpp  Initializer.hpp  Pool.hpp  Quantizer.hpp  Rotator.hpp  Searcher.hpp
inc/index/fastscan/: FastScan.hpp  pack_codes.hpp
inc/third/: README.md
inc/utils/: IO.hpp  StopW.hpp  memory.hpp  space.hpp  tools.hpp
python/: compute_gt.py  cvt_data.py  download_dataset.py  ivf.py  requirements.txt
python/utils/: io.py  preprocess.py
results/exrabitq/: README.md  openai1536_exhaf4.csv
src/: CMakeLists.txt  create_index.cpp  test_search.cpp
